[package]
name = "c3-inheritance"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/c3-linearization"
documentation = "https://docs.rs/c3-inheritance"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
